--- a/App Standardized People Algorithm.ipynb
+++ b/App Standardized People Algorithm.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "pyinstaller --onefile main.py\n"
    ]
   }
  ],
